# langsmith-starter-kit

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
agent/: agent.py
notebooks/: evaluations.ipynb
setup/: annotations.py  config.py  datasets.py  evaluators.py  experiments.py  prompts.py  traces.py
src/: base.py  model.py
src/chatbot/: use_case.py
src/chatbot/agent/: agent.py  tools.py
src/chatbot/data/: eval_dataset_ground_truth.csv  eval_dataset_multi_source.csv  question_bank.csv
src/chatbot/setup/: annotations.py  datasets.py  evaluators.py  experiments.py  prompts.py  traces.py
src/email_agent/: use_case.py
src/email_agent/agent/: agent.py
src/email_agent/data/: emails.csv  next_action.jsonl
src/email_agent/setup/: annotations.py  datasets.py  evaluators.py  experiments.py  prompts.py  traces.py
src/finance_qa/: use_case.py
src/finance_qa/agent/: agent.py  tools.py
src/finance_qa/scripts/: generate_ground_truth_kb.py  generate_synthetic_question_bank.py
src/finance_qa/setup/: datasets.py  evaluators.py  experiments.py  prompts.py  traces.py
src/finance_qa/tests/: conftest.py  test_distribution.py
use_cases/: base.py
use_cases/chatbot/: use_case.py
use_cases/chatbot/agent/: agent.py
use_cases/chatbot/setup/: datasets.py  evaluators.py  experiments.py  traces.py
use_cases/email_agent/: use_case.py
use_cases/email_agent/agent/: agent.py  tools.py  utils.py
utils/: annotations.py  config.py  datasets.py  evaluators.py  experiments.py  prompts.py  teardown.py
(+5 files in other folders)
